[workspace.package]
version = "6.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/succinctlabs/sp1"
keywords = ["sp1", "succinct", "zero-knowledge", "zkvm"]
categories = ["cryptography"]
include = ["SP1_VERSION"]

[workspace]
members = [
  "crates/build",
  "crates/cli",
  "crates/core/compiler",
  "crates/core/executor",
  "crates/core/jit",
  "crates/core/machine",
  "crates/cuda",
  "crates/curves",
  "crates/derive",
  "crates/helper",
  "crates/hypercube",
  "crates/perf",
  "crates/primitives",
  "crates/prover",
  "crates/recursion/circuit",
  "crates/recursion/compiler",
  "crates/recursion/executor",
  "crates/recursion/gnark-cli",
  "crates/recursion/gnark-ffi",
  "crates/recursion/machine",
  "crates/prover-types",
  "crates/sdk",
  "crates/test-artifacts",
  "crates/verifier",
  "crates/zkvm/*",
  "slop/crates/air",
  "slop/crates/algebra",
  "slop/crates/alloc",
  "slop/crates/baby-bear",
  "slop/crates/basefold-prover",
  "slop/crates/basefold",
  "slop/crates/bn254",
  "slop/crates/challenger",
  "slop/crates/commit",
  "slop/crates/dft",
  "slop/crates/fri",
  "slop/crates/futures",
  "slop/crates/jagged",
  "slop/crates/keccak-air",
  "slop/crates/koala-bear",
  "slop/crates/matrix",
  "slop/crates/maybe-rayon",
  "slop/crates/merkle-tree",
  "slop/crates/multilinear",
  "slop/crates/pgspcs",
  "slop/crates/poseidon2",
  "slop/crates/spartan",
  "slop/crates/stacked",
  "slop/crates/sumcheck",
  "slop/crates/symmetric",
  "slop/crates/tensor",
  "slop/crates/uni-stark",
  "slop/crates/utils",
  "slop/crates/primitives",
  "slop/crates/whir",
  # sp1-gpu crates
  "sp1-gpu/crates/air",
  "sp1-gpu/crates/basefold",
  "sp1-gpu/crates/challenger",
  "sp1-gpu/crates/commit",
  "sp1-gpu/crates/cuda",
  "sp1-gpu/crates/server",
  "sp1-gpu/crates/jagged_assist",
  "sp1-gpu/crates/jagged_sumcheck",
  "sp1-gpu/crates/jagged_tracegen",
  "sp1-gpu/crates/logup_gkr",
  "sp1-gpu/crates/merkle_tree",
  "sp1-gpu/crates/perf",
  "sp1-gpu/crates/prover_components",
  "sp1-gpu/crates/shard_prover",
  "sp1-gpu/crates/sys",
  "sp1-gpu/crates/tracegen",
  "sp1-gpu/crates/tracing",
  "sp1-gpu/crates/utils",
  "sp1-gpu/crates/zerocheck",
]
exclude = ["examples/target", "crates/eval"]
resolver = "2"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[workspace.dependencies]
sp1-build = { version = "6.0.0", path = "crates/build" }
sp1-cli = { version = "6.0.0", path = "crates/cli", default-features = false }
sp1-core-executor = { version = "6.0.0", path = "crates/core/executor" }
sp1-core-machine = { version = "6.0.0", path = "crates/core/machine" }
sp1-cuda = { version = "6.0.0", path = "crates/cuda" }
sp1-curves = { version = "6.0.0", path = "crates/curves" }
sp1-derive = { version = "6.0.0", path = "crates/derive" }
# sp1-eval = { version = "6.0.0", path = "crates/eval" }
sp1-helper = { version = "6.0.0", path = "crates/helper", default-features = false }
sp1-hypercube = { version = "6.0.0", path = "crates/hypercube" }
sp1-jit = { version = "6.0.0", path = "crates/core/jit" }
sp1-lib = { version = "6.0.0", path = "crates/zkvm/lib", default-features = false }
sp1-primitives = { version = "6.0.0", path = "crates/primitives" }
sp1-prover = { version = "6.0.0", path = "crates/prover" }
sp1-prover-types = { version = "6.0.0", path = "crates/prover-types" }
sp1-recursion-circuit = { version = "6.0.0", path = "crates/recursion/circuit", default-features = false }
sp1-recursion-compiler = { version = "6.0.0", path = "crates/recursion/compiler" }
sp1-recursion-executor = { version = "6.0.0", path = "crates/recursion/executor", default-features = false }
sp1-recursion-gnark-ffi = { version = "6.0.0", path = "crates/recursion/gnark-ffi", default-features = false }
sp1-recursion-machine = { version = "6.0.0", path = "crates/recursion/machine", default-features = false }
sp1-sdk = { version = "6.0.0", path = "crates/sdk", default-features = false }
sp1-verifier = { version = "6.0.0", path = "crates/verifier", default-features = false }
sp1-zkvm = { version = "6.0.0", path = "crates/zkvm/entrypoint", default-features = false }
test-artifacts = { path = "crates/test-artifacts" }

# sp1-gpu crates
sp1-gpu-air = { version = "6.0.0", path = "sp1-gpu/crates/air" }
sp1-gpu-basefold = { version = "6.0.0", path = "sp1-gpu/crates/basefold" }
sp1-gpu-challenger = { version = "6.0.0", path = "sp1-gpu/crates/challenger" }
sp1-gpu-commit = { version = "6.0.0", path = "sp1-gpu/crates/commit" }
sp1-gpu-cudart = { version = "6.0.0", path = "sp1-gpu/crates/cuda" }
sp1-gpu-jagged-assist = { version = "6.0.0", path = "sp1-gpu/crates/jagged_assist" }
sp1-gpu-jagged-sumcheck = { version = "6.0.0", path = "sp1-gpu/crates/jagged_sumcheck" }
sp1-gpu-jagged-tracegen = { version = "6.0.0", path = "sp1-gpu/crates/jagged_tracegen" }
sp1-gpu-logup-gkr = { version = "6.0.0", path = "sp1-gpu/crates/logup_gkr" }
sp1-gpu-merkle-tree = { version = "6.0.0", path = "sp1-gpu/crates/merkle_tree" }
sp1-gpu-perf = { version = "6.0.0", path = "sp1-gpu/crates/perf" }
sp1-gpu-prover = { version = "6.0.0", path = "sp1-gpu/crates/prover_components" }
sp1-gpu-server = { version = "6.0.0", path = "sp1-gpu/crates/server" }
sp1-gpu-shard-prover = { version = "6.0.0", path = "sp1-gpu/crates/shard_prover" }
sp1-gpu-sys = { version = "6.0.0", path = "sp1-gpu/crates/sys" }
sp1-gpu-tracegen = { version = "6.0.0", path = "sp1-gpu/crates/tracegen" }
sp1-gpu-tracing = { version = "6.0.0", path = "sp1-gpu/crates/tracing" }
sp1-gpu-utils = { version = "6.0.0", path = "sp1-gpu/crates/utils" }
sp1-gpu-zerocheck = { version = "6.0.0", path = "sp1-gpu/crates/zerocheck" }

p3-air = "0.3.1-succinct"
p3-baby-bear = { version = "0.3.1-succinct", features = ["nightly-features"] }
p3-bn254-fr = "0.3.1-succinct"
p3-challenger = "0.3.1-succinct"
p3-commit = "0.3.1-succinct"
p3-dft = "0.3.1-succinct"
p3-field = "0.3.1-succinct"
p3-fri = "0.3.1-succinct"
p3-keccak-air = "0.3.1-succinct"
p3-koala-bear = "0.3.1-succinct"
p3-matrix = "0.3.1-succinct"
p3-maybe-rayon = { version = "0.3.1-succinct", features = ["parallel"] }
p3-merkle-tree = "0.3.1-succinct"
p3-poseidon2 = "0.3.1-succinct"
p3-symmetric = "0.3.1-succinct"
p3-uni-stark = "0.3.1-succinct"
p3-util = "0.3.1-succinct"

slop-air = { version = "6.0.0", path = "./slop/crates/air" }
slop-algebra = { version = "6.0.0", path = "./slop/crates/algebra" }
slop-alloc = { version = "6.0.0", path = "./slop/crates/alloc" }
slop-baby-bear = { version = "6.0.0", path = "./slop/crates/baby-bear" }
slop-basefold = { version = "6.0.0", path = "./slop/crates/basefold" }
slop-basefold-prover = { version = "6.0.0", path = "./slop/crates/basefold-prover" }
slop-bn254 = { version = "6.0.0", path = "./slop/crates/bn254" }
slop-challenger = { version = "6.0.0", path = "./slop/crates/challenger" }
slop-commit = { version = "6.0.0", path = "./slop/crates/commit" }
slop-dft = { version = "6.0.0", path = "./slop/crates/dft" }
slop-fri = { version = "6.0.0", path = "./slop/crates/fri" }
slop-futures = { version = "6.0.0", path = "./slop/crates/futures" }
slop-jagged = { version = "6.0.0", path = "./slop/crates/jagged" }
slop-keccak-air = { version = "6.0.0", path = "./slop/crates/keccak-air" }
slop-koala-bear = { version = "6.0.0", path = "./slop/crates/koala-bear" }
slop-matrix = { version = "6.0.0", path = "./slop/crates/matrix" }
slop-maybe-rayon = { version = "6.0.0", path = "./slop/crates/maybe-rayon" }
slop-merkle-tree = { version = "6.0.0", path = "./slop/crates/merkle-tree" }
slop-multilinear = { version = "6.0.0", path = "./slop/crates/multilinear" }
slop-pgspcs = { version = "6.0.0", path = "./slop/crates/pgspcs" }
slop-primitives = { version = "6.0.0", path = "./slop/crates/primitives" }
slop-poseidon2 = { version = "6.0.0", path = "./slop/crates/poseidon2" }
slop-spartan = { version = "6.0.0", path = "./slop/crates/spartan" }
slop-stacked = { version = "6.0.0", path = "./slop/crates/stacked" }
slop-sumcheck = { version = "6.0.0", path = "./slop/crates/sumcheck" }
slop-symmetric = { version = "6.0.0", path = "./slop/crates/symmetric" }
slop-tensor = { version = "6.0.0", path = "./slop/crates/tensor" }
slop-uni-stark = { version = "6.0.0", path = "./slop/crates/uni-stark" }
slop-utils = { version = "6.0.0", path = "./slop/crates/utils" }
slop-whir = { version = "6.0.0", path = "./slop/crates/whir" }

# For testing.
tokio-test = "0.4.4"
rstest = "0.26.0"

# misc
aws-config = "1.5.3"
aws-sdk-kms = "1.77.0"
rustls = "0.23.27"
alloy-signer = { version = "1.0", default-features = false }
alloy-signer-aws = { version = "1.0", default-features = false }
alloy-signer-local = { version = "1.0", default-features = false }
alloy-sol-types = { version = "1.0", default-features = false }
alloy-primitives = { version = "1.0", default-features = false }
amcl = { package = "snowbridge-amcl", version = "1.0.2", default-features = false }
anyhow = "1.0.86"
arrayref = "0.3.8"
arrayvec = "0.7.6"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
async-trait = "0.1.81"
backoff = "0.4"
backtrace = "0.3.71"
bincode = "1.3.3"
bindgen = "0.70.1"
blake3 = { version = "1.6.1", default-features = false }
bytemuck = "1.16.3"
bytes = "1.10.1"
cargo_metadata = "0.18.1"
cfg-if = "1.0.3"
chrono = { version = "0.4.38", default-features = false }
clap = "4.5.9"
critical-section = "1.2.0"
crossbeam = "0.8.4"
dashu = "0.4.2"
deepsize2 = { version = "0.1.0", features = ["hashbrown"] }
derive-where = { version = "1.5.0", features = ["serde"] }
dirs = "5.0.1"
downloader = { version = "0.2", default-features = false }
dynasmrt = "3.2.0"
either = { version = "1.15.0", features = ["serde"] }
elf = "0.7.4"
elliptic-curve = "0.13.8"
embedded-alloc = "0.6.0"
enum-map = "2.7.3"
eventsource-stream = "0.2.0"
eyre = "0.6.12"
ff = "0.13"
futures = "0.3"
futures-util = "0.3"
gecko_profile = "0.4.0"
generic-array = "=1.1.0"
getrandom_v2 = { package = "getrandom", version = "0.2.15", default-features = false }
getrandom_v3 = { package = "getrandom", version = "0.3.3", default-features = false }
hashbrown = "0.14.5"
hex = "0.4.3"
indicatif = "0.17.8"
itertools = "0.14.0"
k256 = "0.13.4"
lazy_static = "1.5.0"
libm = "0.2.8"
lru = "0.12.4"
memfd = "0.6.4"
memmap2 = "0.9.8"
num = "0.4.3"
num_cpus = "1.16.0"
num-bigint = { version = "0.4.6", default-features = false }
num-traits = "0.2.19"
p256 = "0.13.2"
pin-project = "1"
proc-macro2 = "1.0"
prost = "0.13"
quote = "1.0"
rand = "0.8.5"
range-set-blaze = "0.1.16"
rayon = "1.10.0"
rayon-scan = "0.1.1"
reqwest = { version = "0.12.12", default-features = false }
reqwest-middleware = "0.3.2"
rrs-lib = { version = "0.2.0", package = "rrs-succinct" }
rug = "1.26.1"
rustc-demangle = "0.1.18"
serde = { version = "1.0.204", features = ["derive"] }
serde_arrays = "0.2"
serde_json = "1.0.132"
serial_test = "3.1.1"
sha2 = "0.10.8"
smallvec = "1.13.2"
static_assertions = "1.1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
subenum = "1.1.2"
syn = "1.0"
sysinfo = "0.30.13"
target-lexicon = "0.12.15"
tempfile = "3.10.1"
thiserror = "1.0"
tiny-keccak = "2.0.2"
tokio = { version = "1.42.0", default-features = false }
tonic = { version = "0.12.3", features = ["tls"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-forest = "0.1.6"
tracing-subscriber = "0.3.18"
opentelemetry = "0.23.0"
thousands = "0.2.0"
tracing-opentelemetry = "0.24.0"
transpose = "0.2.3"
twirp = { package = "twirp-rs", version = "0.13.0-succinct" }
mti = "1.0.7-beta.1"
typenum = "1.17.0"
uuid = "1.17.0"
vec_map = "0.8.2"
vergen = { version = "8", default-features = false }
yansi = "1.0.1"
zkhash = "0.2.0"
zstd = "0.13"

# sp1-gpu additional deps
tokio-blocked = "0.1.0"
cbindgen = "0.27.0"
pathdiff = "0.2.1"
dotenv = "0.15.0"
cc = { version = "1.0", features = ["parallel"] }
which = "6.0"

[workspace.metadata.typos]
default.extend-ignore-re = [
  "Jo-Philipp Wich",
  "SubEIN",
  "DivEIN",
  "CommitCommitedValuesDigest",
  "numer",
]
default.extend-ignore-words-re = ["(?i)groth", "TRE"]

[workspace.lints.clippy]
print_stdout = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(sp1_debug_constraints)',
  'cfg(sp1_debug_global_memory)',
] }
