[package]
name = "sp1-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "git2"] }

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
cargo_metadata = "0.18.1"
clap = { version = "4.4.15", features = ["derive", "env"] }
sp1-core = { path = "../core", features = ["perf"] }
reqwest = { version = "0.11.3", features = ["stream", "json", "rustls-tls"], default-features = false }
futures-util = "0.3.14"
indicatif = "0.15.0"
tokio = { version = "1", features = ["full"] }
tar = "0.4"
flate2 = "1.0"
dirs = "4.0"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
downloader = { version = "0.2", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.113"
yansi = "0.5.1"
hex = "0.4.3"
anstyle = "1.0.6"
target-lexicon = "0.12.13"
