[package]
name = "sp1-cli"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }

[dependencies]

anyhow = { version = "1.0.83", features = ["backtrace"] }
cargo_metadata = "0.18.1"
clap = { version = "4.5.9", features = ["derive", "env"] }
sp1-build = { workspace = true }
sp1-prover = { workspace = true }
sp1-sdk = { workspace = true }
sp1-core = { workspace = true }
reqwest = { version = "0.12.4", features = [
  "stream",
  "json",
  "rustls-tls",
], default-features = false }
futures-util = "0.3.30"
indicatif = "0.17.8"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
downloader = { version = "0.2", default-features = false, features = [
  "rustls-tls",
] }
serde_json = "1.0.121"
yansi = "1.0.1"
hex = "0.4.3"
anstyle = "1.0.8"
target-lexicon = "0.12.15"
tempfile = "3.10.1"
