[package]
edition = "2021"
name = "sp1-core"
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive", "rc"] }
elf = "0.7.4"
itertools = "0.13.0"
log = "0.4.21"
nohash-hasher = "0.2.0"
num = { version = "0.4.3" }
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-blake3 = { workspace = true, features = ["parallel"] }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-fri = { workspace = true }
p3-keccak = { workspace = true }
p3-keccak-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true, features = ["parallel"] }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }
rrs-lib = { git = "https://github.com/GregAC/rrs.git" }
sp1-derive = { path = "../derive" }
sp1-primitives = { path = "../primitives" }

anyhow = "1.0.83"
amcl = { package = "snowbridge-amcl", version = "1.0.2", default-features = false, features = [
  "bls381",
] }
arrayref = "0.3.7"
blake3 = "1.5"
cfg-if = "1.0.0"
generic-array = { version = "1.0.0", features = ["alloc", "serde"] }
typenum = "1.17.0"
curve25519-dalek = { version = "4.1.2" }
elliptic-curve = "0.13.8"
hex = "0.4.3"
k256 = { version = "0.13.3", features = ["expose-field"] }
num_cpus = "1.16.0"
serde_with = "3.8.1"
size = "0.4.1"
tempfile = "3.10.1"
tracing = "0.1.40"
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
strum_macros = "0.26"
strum = "0.26"
web-time = "1.1.0"
rayon-scan = "0.1.1"
thiserror = "1.0.60"
num-bigint = { version = "0.4.3", default-features = false }
rand = "0.8.5"
bytemuck = "1.16.0"

[dev-dependencies]
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
criterion = "0.5.1"
num = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
sp1-zkvm = { path = "../zkvm/entrypoint" }

[features]
neon = ["p3-blake3/neon"]
programs = []
debug = []

[[bench]]
harness = false
name = "main"

[lib]
bench = false
