[package]
name = "curta-core2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
p3-air = { workspace = true }
valida-machine = { workspace = true }
valida-opcodes = { workspace = true }
valida-cpu = { workspace = true }

[dev-dependencies]
valida-isa = { workspace = true }
