[package]
name = "sp1-eval"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[dependencies]
sp1-core = { path = "../core", version = "0.0.2-test" }
sp1-prover = { path = "../prover", version = "0.0.2-test" }

clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
serde = "1.0.204"
